src/app/mabble/mabble.component.scss
@import '../../styles/variables';

h1 {
    margin-top: 5px;
    margin-bottom: 0;
}

small {
    position: relative;
    top: -8px;
}

h2 {
    margin-top: 30px;
}

.game-section {
    // iphone 5
    height: 70vh;
    // iphone 6/7/8
    @media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : portrait) {
        height: 75vh;
    }
    // iphone x
    @media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
        height: 80vh;
    }
    .players {
        height: 15%;
        img {
            width: 35px;
            height: 35px;
        }
    }

    .play-area {
        height: 100%;
        background: #ffffba;
        .play-row {
            height: 33.3333%;
            text-align: center;
            padding-top: 4%;
            img {
                width: 60%;
            }
        }
    }

    .play-buttons {
        background: #535353;
        .col-2 {
            padding: 2px;
        }
        img {
            width: 100%;
        }
    }

    .fixed-bottom {
        margin-left: auto;
        margin-right: auto;
        .col-2 {
            border-top: 1px solid #ccc;
            border-left: 1px solid #ccc;
            border-right: 1px solid #ccc;
            &:first-child {
                border-left: none;
            }
            &:last-child {
                border-right: none;
            }
        }
    }

    .winner {
        padding-top: 15px;
        h2 {
            margin: 0;
        }
        img {
            max-width: 200px;
            max-height: 200px;
        }
    }
}

